--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,23 @@
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>NOS - NEURO Wallet</title>
-  <link rel="shortcut icon" href="img/app/favicon.ico">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/app/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/app/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/app/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/app/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/app/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/app/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/app/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/app/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/app/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/app/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/app/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/app/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/app/favicon-16x16.png">
+  <link rel="manifest" href="img/app/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/app/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
