Add branding colors and some strings

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <title>NOS - NOLLAR Wallet</title>
+  <title>NOLLAR Wallet</title>
   <link rel="apple-touch-icon" sizes="57x57" href="img/app/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/app/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/app/apple-icon-72x72.png">
