Add adblock warning

--- a/www/index.html
+++ b/www/index.html
@@ -83,5 +83,8 @@
   <script src="js/app.js"></script>
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
+  <!-- Adblock warning -->
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" onerror="alert('Wallet does not work with Adblocker');"></script>
+
 </body>
 </html>
